--- a/Server/package.json
+++ b/Server/package.json
@@ -18,8 +18,10 @@
     "dicebear": "^9.2.4",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
+    "redis": "^5.9.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
